feat: add generic settings and removed redundant endpoints (#140)
* feat: removed unused redundant endpoints and added new generic settings

* feat: adapted to svc

* fix: test

* feat: updated client url
